syntax = "proto3";

package sentry_protos.billing.v1;

import "google/protobuf/timestamp.proto";

enum DataCategory {
  // Reserved and unused.
  DATA_CATEGORY_UNSPECIFIED = 0;
  // Error events and Events with an event_type not explicitly listed below.
  DATA_CATEGORY_ERROR = 1;
  // Transaction events.
  DATA_CATEGORY_TRANSACTION = 2;
  // Events with an event type of csp, hpkp, expectct and expectstaple.
  DATA_CATEGORY_SECURITY = 3;
  // An attachment. Quantity is the size of the attachment in bytes.
  DATA_CATEGORY_ATTACHMENT = 4;
  // Session updates. Quantity is the number of updates in the batch.
  DATA_CATEGORY_SESSION = 5;
  // Processed profiles (all profiles, whether or not we store them).
  DATA_CATEGORY_PROFILE = 6;
  // Session Replays.
  DATA_CATEGORY_REPLAY = 7;
  // DEPRECATED: A transaction for which metrics were extracted.
  DATA_CATEGORY_TRANSACTION_PROCESSED = 8 [deprecated = true];
  // Indexed transaction events stored in full.
  DATA_CATEGORY_TRANSACTION_INDEXED = 9;
  // Monitor check-ins.
  DATA_CATEGORY_MONITOR = 10;
  // Indexed profiles that will be stored later.
  DATA_CATEGORY_PROFILE_INDEXED = 11;
  // Spans from which we extracted metrics.
  DATA_CATEGORY_SPAN = 12;
  // A monitor job that has scheduled monitor checkins.
  DATA_CATEGORY_MONITOR_SEAT = 13;
  // User Feedback (UserReportV2).
  DATA_CATEGORY_USER_REPORT_V2 = 14;
  // Metric buckets.
  DATA_CATEGORY_METRIC_BUCKET = 15;
  // Spans stored in full.
  DATA_CATEGORY_SPAN_INDEXED = 16;
  // Milliseconds per indexed profile chunk, excluding UI profile chunks.
  DATA_CATEGORY_PROFILE_DURATION = 17;
  // Count of profile chunks received.
  DATA_CATEGORY_PROFILE_CHUNK = 18;
  // Reserved by billing to summarize the bucketed product of metric volume and cardinality.
  DATA_CATEGORY_METRIC_SECOND = 19;
  // DEPRECATED: Session Replays produced via video recording.
  DATA_CATEGORY_DO_NOT_USE_REPLAY_VIDEO = 20 [deprecated = true];
  // Uptime monitors.
  DATA_CATEGORY_UPTIME = 21;
  // Count of individual attachments (as opposed to bytes).
  DATA_CATEGORY_ATTACHMENT_ITEM = 22;
  // Log event count for rate limiting and measuring missing breadcrumbs.
  DATA_CATEGORY_LOG_ITEM = 23;
  // Log event total bytes.
  DATA_CATEGORY_LOG_BYTE = 24;
  // Profile duration of a UI profile (milliseconds per indexed UI profile chunk).
  DATA_CATEGORY_PROFILE_DURATION_UI = 25;
  // UI profile chunk count.
  DATA_CATEGORY_PROFILE_CHUNK_UI = 26;
  // Seer Autofix run events.
  DATA_CATEGORY_SEER_AUTOFIX = 27;
  // Seer Scanner run events.
  DATA_CATEGORY_SEER_SCANNER = 28;
  // DEPRECATED: Use DATA_CATEGORY_SEER_USER instead.
  DATA_CATEGORY_PREVENT_USER = 29 [deprecated = true];
  // Prevent review events.
  DATA_CATEGORY_PREVENT_REVIEW = 30;
  // Size analysis of preprod build artifacts.
  DATA_CATEGORY_SIZE_ANALYSIS = 31;
  // Installable build artifact uploads.
  DATA_CATEGORY_INSTALLABLE_BUILD = 32;
  // Trace metric items.
  DATA_CATEGORY_TRACE_METRIC = 33;
  // Seer users.
  DATA_CATEGORY_SEER_USER = 34;
  // Any other data category not known by this version.
  DATA_CATEGORY_UNKNOWN = -1;
}

// Aggregated usage counts for a single data category.
message UsageData {
  uint64 total = 1;
  uint64 accepted = 2;
  uint64 dropped = 3;
  uint64 filtered = 4;
  uint64 over_quota = 5;
  uint64 smart_limit = 6;
  uint64 dynamic_sampling = 7;
}

message GetUsageRequest {
  uint64 organization_id = 1;
  google.protobuf.Timestamp start = 2;
  // If not set, returns all usage from start onwards.
  optional google.protobuf.Timestamp end = 3;
}

message CategoryUsage {
  DataCategory category = 1;
  UsageData data = 2;
}

// Usage data for a single day.
message DailyUsage {
  google.protobuf.Timestamp date = 1;
  repeated CategoryUsage usage = 2;
}

message GetUsageResponse {
  // Usage broken down by day, each containing per-category usage.
  repeated DailyUsage days = 1;
}

service UsageService {
  rpc GetUsage(GetUsageRequest) returns (GetUsageResponse);
}
